--- a/portfolio-project/Views/Home/Index.cshtml
+++ b/portfolio-project/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div id="app"></div>
+<script>
+  import App from '/dist/App.svelte';
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+  const app = new App({
+    target: document.getElementById('app'),
+  });
+</script>
