--- a/portfolio-project/Views/Shared/_Layout.cshtml
+++ b/portfolio-project/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - portfolio_project</title>
     <script type="importmap"></script>
+    <script src="~/dist/bundle.js"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/portfolio_project.styles.css" asp-append-version="true" />
